k8s-apps-deployment/python-test/python-test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-test
  namespace: python-test
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: python-test
  template:
    metadata:
      labels:
        app: python-test
    spec:
      containers:
      - image: 680381031208.dkr.ecr.us-east-1.amazonaws.com/eks-test
        name: python-test-app  
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 200m
          requests:
            cpu: 100m
