k8s-apps-deployment/python-test/python-test-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-test
  namespace: python-test
  labels:
    app: python-test
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: python-test
