k8s-apps-deployment/python-test/python-test-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-test-ingress
  namespace: python-test
  labels:
    app: python-test
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "python-test-cratislab-prod-k8s.cratis.cc"  
    http:
      paths:
      - pathType: Prefix
        path: /      
        backend:
          service: 
            name: python-test
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
  namespace: argocd
spec:
  controller: k8s.io/ingress-nginx
